# nhs-notify-release-tests

./: .gitignore  .tool-versions  README.md  conftest.py  example.env  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: test.yml  trigger_docker_build.yml
helpers/: apim_request.py  authentication.py  aws_client.py  bash.py  constants.py  evidence.py  generators.py  govuk_notify.py  logger.py  switch_account.py
helpers/api/: api_client.py  apim_client.py  apim_request.py  authentication.py  govuk_notify.py
helpers/aws/: aws_client.py
helpers/aws/clients/: dynamodb_client.py  lambda_client.py  s3_client.py  (+1 more)
helpers/mesh/: mesh_helper.py
helpers/scripts/: switch_account.sh
helpers/test_data/: batch_data.py  quota_data.py  user_data.py
helpers/ui/: nhs_app_journey.py
resources/nhsapp_registration/: release_test_app_registration.json
resources/routing_configs/: 1962c467-0000-0000-0000-3fa5cee00391_routing-config.json  1962c467-0000-0000-0000-3fa5cee00392_routing-config.json  1962c467-0000-0000-0000-3fa5cee00393_routing-config.json  1962c467-0000-0000-0000-3fa5cee00394_routing-config.json
resources/templates/: letter-pdf-release-testing_template.json  nhsapp-release-testing_template.json  prerendermock-release-testing_template.json  synertec-release-testing.csv
scripts/: bash_assume_role.sh  get_account_name_from_env.sh  get_account_number_from_name.sh  get_mesh_cli.sh  run.sh
tests/: test_apim_request.py  test_aws_client.py  test_gukn_request.py  test_nhs_app_account_endpoint.py  test_nhsapp_login_journey.py
tests/release_tests/: test_alternative_contact_details.py  test_anonymous_patient.py  test_failure_scenarios.py  test_filter_rules.py  test_mesh.py  test_message_batch.py  test_mixed_suppliers.py  test_nhs_app_account_endpoint.py  test_ods_override.py  test_parallel_send.py  test_pdf_rendering.py
