[tool.poetry]
name = "tests"
version = "0.1.0"
description = "NHS Notify Release Tests"
authors = ["rachel.kennedy13 <rachel.kennedy13@nhs.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.4"
boto3 = "^1.39.9"
playwright = "^1.54.0"
install-playwright = "^0.1.1"
notifications-python-client = "^10.0.1"
cryptography = "^45.0.6"
python-dotenv = "^1.1.1"
pytest = "^8.4.1"
dotenv = "^0.9.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
